@@ -43,6 +43,20 @@
                     --add-exports=java.base/sun.security.internal.spec=ALL-UNNAMED
                     --add-opens=java.base/javax.crypto=ALL-UNNAMED
                     --add-opens=java.base/sun.security.pkcs12=ALL-UNNAMED
+                    --add-exports=jdk.crypto.ec/sun.security.ec=ALL-UNNAMED
+                    --add-exports=jdk.crypto.ec/sun.security.ec=java.base
+                </argLine>
+            </properties>
+        </profile>
+        <profile>
+            <id>jdk11</id>
+            <activation>
+                <jdk>11</jdk>
+            </activation>
+            <properties>
+                <argLine>
+                    --add-exports=jdk.crypto.ec/sun.security.ec=ALL-UNNAMED
+                    --add-exports=jdk.crypto.ec/sun.security.ec=java.base
                 </argLine>
             </properties>
         </profile>
